# spc-suplementos

./: Dockerfile  app.py  config.py  docker-compose.yml  models.py  nginx.conf  pyproject.toml  requirements.txt  setup.cfg  supervisord.conf
.github/workflows/: tests.yml
app/: tasks.py
app/api/: __init__.py  auth.py
app/models/: configuracion.py  movimiento_stock.py  usuario.py  venta.py
app/routes/: auth.py  clientes.py  productos.py  ventas.py
app/static/: swagger.yaml
app/static/css/: auth.css  style.css
app/static/js/: clientes.js  main.js  productos.js  reportes.js  ventas.js
app/templates/: base.html  base_auth.html  index.html
app/templates/auth/: login.html  perfil.html
app/templates/clientes/: index.html
app/templates/email/: daily_report.html  stock_alert.html
app/templates/productos/: index.html  modal_producto.html  modal_stock.html
app/templates/reportes/: index.html
app/templates/ventas/: modal_venta.html
app/utils/: backup.py  decorators.py  email.py  helpers.py  logging.ini  security.py  security_config.yaml  validators.py
docs/: API.md  DEPLOYMENT.md  DEVELOPMENT.md  INSTALL.md  TECHNICAL.md  USER_MANUAL.md
migrations/: env.py
scripts/: backup.sh  deploy.sh
static/: main.js
templates/: clientes.html  index.html  productos.html  ventas.html
templates/components/: modal_cliente.html  modal_producto.html  modal_venta.html
tests/: conftest.py  test_api.py  test_models.py  test_routes.py  test_security.py
