[tool.poetry]
name = "spc-suplementos"
version = "1.0.0"
description = "Sistema de gestión para SPC Suplementos"
authors = ["Tu Nombre <tu@email.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0.1"
flask-sqlalchemy = "^2.5.1"
flask-migrate = "^3.1.0"
flask-login = "^0.5.0"
flask-mail = "^0.9.1"
psycopg2-binary = "^2.9.1"
gunicorn = "^20.1.0"
python-dotenv = "^0.19.0"
jwt = "^1.3.1"
schedule = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.7b0"
flake8 = "^3.9.2" 

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
^/migrations/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100

[tool.pylint.messages_control]
disable = "C0111"

[tool.pylint.format]
max-line-length = "100"